--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
    },
    "dependencies": {
       "@nestjs/common": "^8.0.0",
+      "@nestjs/config": "^1.2.0",
       "@nestjs/core": "^8.0.0",
       "@nestjs/platform-express": "^8.0.0",
       "@nestjs/swagger": "^5.2.0",
       "@nestjs/typeorm": "^8.0.3",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.13.2",
+      "jwt-simple": "^0.5.6",
       "mysql": "^2.14.1",
       "pg": "^8.7.3",
       "reflect-metadata": "^0.1.13",
@@ -43,6 +45,7 @@
       "@nestjs/testing": "^8.0.0",
       "@types/express": "^4.17.13",
       "@types/jest": "27.4.0",
+      "@types/jwt-simple": "^0.5.33",
       "@types/node": "^16.11.10",
       "@types/supertest": "^2.0.11",
       "@typescript-eslint/eslint-plugin": "^5.0.0",
