--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
       "@nestjs/common": "^8.0.0",
       "@nestjs/config": "^1.2.0",
       "@nestjs/core": "^8.0.0",
+      "@nestjs/jwt": "^8.0.0",
+      "@nestjs/passport": "^8.2.1",
       "@nestjs/platform-express": "^8.0.0",
       "@nestjs/swagger": "^5.2.0",
       "@nestjs/typeorm": "^8.0.3",
@@ -32,6 +34,8 @@
       "class-validator": "^0.13.2",
       "jwt-simple": "^0.5.6",
       "mysql": "^2.14.1",
+      "passport": "^0.5.2",
+      "passport-local": "^1.0.0",
       "pg": "^8.7.3",
       "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
@@ -47,6 +51,8 @@
       "@types/jest": "27.4.0",
       "@types/jwt-simple": "^0.5.33",
       "@types/node": "^16.11.10",
+      "@types/passport-jwt": "^3.0.6",
+      "@types/passport-local": "^1.0.34",
       "@types/supertest": "^2.0.11",
       "@typescript-eslint/eslint-plugin": "^5.0.0",
       "@typescript-eslint/parser": "^5.0.0",
@@ -54,6 +60,7 @@
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-prettier": "^4.0.0",
       "jest": "^27.2.5",
+      "passport-jwt": "^4.0.0",
       "prettier": "^2.3.2",
       "source-map-support": "^0.5.20",
       "supertest": "^6.1.3",
